Re-add scrollbars for productos and consultas lists + add small margin for toolbars to allow for correct shadows

--- a/src/components/admin-box/ConsultasList.module.css
+++ b/src/components/admin-box/ConsultasList.module.css
@@ -1,13 +1,8 @@
 .consultasContainer {
   height: 60vh;
   padding-bottom: 1rem;
+  margin-top: 2px;
   overflow-y: scroll;
-  -ms-overflow-style: none;  /* Hide scrollbar for IE and Edge */
-  scrollbar-width: none;  /* Hide scrollbar for Firefox */
-}
-/* Hide scrollbar for Chrome, Safari and Opera */
-.consultasContainer::-webkit-scrollbar {
-  display: none;
 }
 .toolbarActionButton {
   margin-top: 0.75rem;
